--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -5,7 +5,6 @@
 	"main": "./dist/index.js",
 	"module": "./dist/index.js",
 	"types": "./dist/index.d.ts",
-	
 	"scripts": {
 		"build": "tsc --project tsconfig.json",
 		"clean": "rimraf dist",
@@ -24,6 +23,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"@types/node": "^22.9.0",
+		"@zenfs/core": "^1.3.3",
 		"quickjs-emscripten": "^0.31.0",
 		"tslib": "^2.6.2"
 	},
