--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -24,10 +24,15 @@
 	"dependencies": {
 		"@types/node": "^22.9.0",
 		"@zenfs/core": "^1.3.3",
+		"buffer": "^6.0.3",
+		"fflate": "^0.8.2",
+		"jszip": "^3.10.1",
+		"pako": "^2.1.0",
 		"quickjs-emscripten": "^0.31.0",
 		"tslib": "^2.6.2"
 	},
 	"devDependencies": {
+		"@types/pako": "^2.0.3",
 		"typescript": "^5.6.3"
 	},
 	"publishConfig": {
