--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -12,7 +12,7 @@
 	},
 	"dependencies": {
 		"@monaco-editor/react": "^4.6.0",
-		"@open-web-container/core": "workspace:*",
+		"@open-web-container/api": "workspace:*",
 		"@xterm/addon-fit": "^0.10.0",
 		"@xterm/xterm": "^5.5.0",
 		"allotment": "^1.20.2",
