--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -10,7 +10,6 @@
 		"build:worker": "mkdir -p src/generated && BUILD_TARGET=worker tsup",
 		"build:main": "tsup",
 		"build": "pnpm build:worker && pnpm build:main",
-		
 		"clean": "rimraf dist",
 		"dev": "tsc --project tsconfig.json --watch",
 		"test": "jest",
@@ -36,6 +35,9 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@jitl/quickjs-asmjs-mjs-release-sync": "^0.31.0",
+		"@jitl/quickjs-singlefile-browser-release-asyncify": "^0.31.0",
+		"@jitl/quickjs-singlefile-browser-release-sync": "^0.31.0",
 		"@zenfs/core": "^1.3.3",
 		"buffer": "^6.0.3",
 		"fflate": "^0.8.2",
